<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="goal"
            type="com.example.dostigator.data.Goal" />

        <variable
            name="itemClickListener"
            type="com.example.dostigator.adapters.ItemClickListener" />

        <variable
            name="editClickListener"
            type="com.example.dostigator.adapters.EditClickListener" />

        <variable
            name="deleteClickListener"
            type="com.example.dostigator.adapters.DeleteClickListener" />

        <variable
            name="completeClickListener"
            type="com.example.dostigator.adapters.CompleteClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{() -> itemClickListener.onClick(goal)}">

        <ImageView
            android:id="@+id/list_item_goal_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/goal_list_image"
            app:goalImage="@{goal}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_baseline_photo_24" />

        <TextView
            android:id="@+id/list_item_goal_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:goalTitle="@{goal}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_item_goal_image"
            tools:text="Goal X" />

        <ImageView
            android:id="@+id/list_item_goal_edit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/goal_list_icon_edit"
            android:onClick="@{() -> editClickListener.onEdit(goal)}"
            android:src="@drawable/ic_baseline_edit_black_24"
            app:layout_constraintBottom_toBottomOf="@+id/list_item_goal_image"
            app:layout_constraintEnd_toEndOf="@+id/list_item_goal_image" />

        <ImageView
            android:id="@+id/list_item_goal_delete_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/goal_list_icon_delete"
            android:onClick="@{() -> deleteClickListener.onDelete(goal)}"
            android:src="@drawable/ic_baseline_delete_black_24"
            app:layout_constraintEnd_toEndOf="@id/list_item_goal_image"
            app:layout_constraintTop_toTopOf="@+id/list_item_goal_image" />

        <CheckBox
            android:id="@+id/list_item_goal_completed_checkbox"
            goalCompleted="@={goal}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> completeClickListener.onComplete(goal)}"
            app:layout_constraintBottom_toBottomOf="@+id/list_item_goal_image"
            app:layout_constraintStart_toStartOf="@+id/list_item_goal_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>